--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -43,7 +43,7 @@
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Inventory <b class="caret"></b></a>
 					<ul class="dropdown-menu">
 						<li><%= link_to "Ingredients", ingredients_path %></li>
-						<li><%= link_to "Update Invenroty", "/edit_inventory" %></li>
+						<li><%= link_to "Update Inventory", "/edit_inventory" %></li>
 						<li><%= link_to "Update Prices", "/edit_prices" %></li>
           </ul>
 				</li>
