add combobox behavior
Signed-off-by: Benjamin Cabé <benjamin@eclipse.org>

--- a/app/views/recipes/_panel_ingredients.html.erb
+++ b/app/views/recipes/_panel_ingredients.html.erb
@@ -39,3 +39,5 @@
     <%= link_to "Add Ingredient", "#", { class: "btn btn-success", id: "add_ingredient" } %>
   </div>
 </div>
+
+<%= javascript_include_tag "combobox" %>
