add instructions to recipes
Signed-off-by: Benjamin Cabé <benjamin@eclipse.org>
Signed-off-by: Benjamin Cabé <benjamin@eclipse.org>

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -11,5 +11,6 @@
 
 <section id="resources" class="col-sm-8">
   <%= render "panel_ingredients" %>
+  <%= render "panel_instructions" %>
   <%= render "panel_components" %>
 </section>
