--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -9,7 +9,7 @@
     <span class="glyphicon glyphicon-th-list"></span>
   </a>
 
-  <h1><%= @total_inventory %><h1>
+  <h1><%= number_to_currency(@total_inventory) %><h1>
 </section>
 
 <section id="resources" class="col-sm-8">
