--- a/app/views/plate_categories/_form.html.erb
+++ b/app/views/plate_categories/_form.html.erb
@@ -17,10 +17,6 @@
   </div>
 
   <div class="form-group">
-    <% if @plate_category.name %>
-      <%= f.submit "Edit Category", class: "btn btn-default" %>
-    <% else %>
-      <%= f.submit "Add Category", class: "btn btn-default" %>
-    <% end %>
+    <%= f.submit class: "btn btn-default" %>
   </div>
 <% end %>
