--- a/app/views/plates/index.html.erb
+++ b/app/views/plates/index.html.erb
@@ -17,7 +17,7 @@
       <th>Name</th>
       <th>Cost</th>
       <th>Sales price</th>
-      <th>Food Cost %</th>
+      <th>Coeff.</th>
       <th></th>
       <th></th>
     </tr>
@@ -28,7 +28,7 @@
     <td><%= link_to plate.name, plate_path(plate) %></td>
     <td><%= number_to_currency plate.total_cost %></td>
     <td><%= number_to_currency plate.sales_price %></td>
-    <td><%= number_to_percentage plate.food_cost %></td>
+    <td><%= (100 / plate.food_cost).round(1) %></td>
     <td><%= link_to 'Show', plate_path(plate) %></td>
     <td><%= link_to 'Delete', plate, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
