--- a/app/views/layouts/_bootstrap_webfonts.html.erb
+++ b/app/views/layouts/_bootstrap_webfonts.html.erb
@@ -5,4 +5,4 @@
 
 <!-- Google Webfonts -->
 
-<link href='http://fonts.googleapis.com/css?family=Lily+Script+One' rel='stylesheet' type='text/css'>
+<link href='//fonts.googleapis.com/css?family=Lily+Script+One' rel='stylesheet' type='text/css'>
