--- a/app/views/ingredients/_form.html.erb
+++ b/app/views/ingredients/_form.html.erb
@@ -93,5 +93,17 @@
   <hr>
   
     <%= f.submit class: "btn btn-default" %>
+
+
+
+
   
 <% end %>
+
+<br />
+
+<ul>
+<% @recipes.each do |r| %>
+  <li><%= link_to r.name, r %></li>
+<% end %>
+</ul>
